--- a/web_app/templates/prediction_form.html
+++ b/web_app/templates/prediction_form.html
@@ -10,23 +10,29 @@
 
         <label>Category</label>
         <select name="category">
-            <option value="Software" selected="true">software</option>
-            <option value="Art">art</option>
-            <option value="Cooking">cooking</option>
-            <option value="Electronics">electronics</option>
+            <option selected value = '0'>Choose a kind</option>
+            {% for category in categories %}
+                <option value='{{category}}' selected='Animation'>{{category}}</option>
+            {% endfor %}
         </select>
         <br>
 
-        <label>Summary of pitch:</label>
-        <input type="text" name="pitch" placeholder="i am the goose that lays golden eggs. fund me bro!" value="i am the goose that lays golden eggs. fund me bro!">
+        <label>Staff Pick</label>
+        <input type="radio" id="True" name="staff_pick" value="True">
+        <label for="True">True</label>
+        <input type="radio" id="False" name="staff_pick" value="False" checked = "checked">
+        <label for="False">False</label><br>
+
+        <label for="description_leng">Length of Description (1 to 196 characters) </label>
+        <input type="number" id="description_leng" name="description_leng" min="1" max="196" value=100>
         <br>
 
-        <label for="a">a (between 0 and 10):</label>
-        <input type="range" id="a" name="a" min="0" max="10">
+        <label for="usd_goal">Fundraising Goal (in USD) </label>
+        <input type="number" id="usd_goal" name="usd_goal" min="100" max="10000000" value=1000>
         <br>
-
-        <label for="b">b (between 0 and 100):</label>
-        <input type="range" id="b" name="b" min="0" max="100">
+        
+        <label for="cam_length">Campaign Length (between 1 and 60) </label>
+        <input type="number" id="cam_length" name="cam_length" min="1" max="60" value=30>
         <br>
 
         <button>Submit</button>
